--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -3,10 +3,9 @@ title: "2016 USA Presidential Campaign Finance in the State of California"
 author: "Dante Ruiz"
 output:
   html_document: default
-  pdf_document: default
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE)
 
 # Importing libraries
